# Interview

cpp-challenge/: CHANGELOG  CMakeLists.txt  README.md  buggy.cxx  main.cpp
cpp-challenge/buggy/: CMakeLists.txt  buggy.cxx  buggy.h
cpp-challenge/test/: compare.pl  data_generator.pl  input_data.txt  output_data.pl  test.sh  tests.cpp
